import type { Meta, StoryObj } from '@storybook/react-vite';
import { List, Heading, Link } from '@udir-design/react/alpha';

const meta: Meta<typeof List.Unordered> = {
  component: List.Unordered,
  tags: ['alpha'],
};

export default meta;
type Story = StoryObj<typeof List.Unordered>;

export const Preview: Story = {
  render: (args) => (
    <List.Unordered {...args}>
      <List.Item>List Item 1</List.Item>
      <List.Item>List Item 2</List.Item>
      <List.Item>List Item 3</List.Item>
    </List.Unordered>
  ),
};

export const Sortert: Story = {
  render: () => (
    <>
      <Heading
        level={2}
        data-size="xs"
        style={{ marginBottom: 'var(--ds-size-2)' }}
      >
        Slik gjør du:
      </Heading>
      <List.Ordered>
        <List.Item>
          Tørk over kyllingfiletene før du krydrer og steker. Dette vil gi en
          finere stekeskorpe på kjøttet. Ikke bruk kjøkkenpapir som loer.
          Papirbiter i maten er ikke noe særlig.
        </List.Item>
        <List.Item>
          Ha salt og pepper på filetene og eventuelt annet krydder for ekstra
          smak. Hvitløkpepper, paprika eller provence kan gi en god smak!
        </List.Item>
        <List.Item>
          Stek filetene på sterk varme i to minutter på hver side. Sett deretter
          på lokk og stek videre på svak varme i syv minutter på hver side.
        </List.Item>
      </List.Ordered>
    </>
  ),
};

export const Usortert: Story = {
  render: (args) => (
    <>
      <Heading
        level={2}
        data-size="xs"
        style={{ marginBottom: 'var(--ds-size-2)' }}
      >
        Foreningen har plikt til å ha revisor hvis de har
      </Heading>
      <List.Unordered {...args}>
        <List.Item>
          et gjennomsnittlig antall ansatte som tilsvarer ti årsverk eller mer
        </List.Item>
        <List.Item>balansesum som er 27 millioner kroner eller mer</List.Item>
        <List.Item>
          driftsinntekter for sin samlede virksomhet på 7 millioner kroner eller
          mer
        </List.Item>
      </List.Unordered>
    </>
  ),
};

export const Innrykk: Story = {
  args: {
    children: [
      <List.Item>
        <Heading
          level={3}
          data-size="xs"
          style={{ marginBottom: 'var(--ds-size-2)' }}
        >
          List Item 1
        </Heading>
        <List.Ordered>
          <List.Item>List Item 1.1</List.Item>
          <List.Item>List Item 1.2</List.Item>
          <List.Item>List Item 1.3</List.Item>
        </List.Ordered>
      </List.Item>,
      <List.Item>
        <Heading
          level={3}
          data-size="xs"
          style={{ marginBottom: 'var(--ds-size-2)' }}
        >
          List Item 2
        </Heading>
        <List.Unordered>
          <List.Item>List Item 2.1</List.Item>
          <List.Item>List Item 2.2</List.Item>
          <List.Item>List Item 2.3</List.Item>
        </List.Unordered>
      </List.Item>,
      <List.Item>
        <Heading
          level={3}
          data-size="xs"
          style={{ marginBottom: 'var(--ds-size-2)' }}
        >
          List Item 3
        </Heading>
        <List.Unordered>
          <List.Item>List Item 3.1</List.Item>
          <List.Item>List Item 3.2</List.Item>
          <List.Item>List Item 3.3</List.Item>
        </List.Unordered>
      </List.Item>,
    ],
  },
};

export const ListeMedLenker: Story = {
  args: {
    style: { listStyle: 'none', padding: 0 },
    children: [
      <List.Item>
        <Link
          href="https://www.udir.no/om-udir/designprofil/identitet/"
          target="_blank"
        >
          Identitet
        </Link>
      </List.Item>,
      <List.Item>
        <Link
          href="https://www.udir.no/om-udir/designprofil/farger/"
          target="_blank"
        >
          Farger
        </Link>
      </List.Item>,
      <List.Item>
        <Link
          href="https://www.udir.no/om-udir/designprofil/typografi/"
          target="_blank"
        >
          Typografi
        </Link>
      </List.Item>,
    ],
  },
};

export const ListeMedOverskrift: Story = {
  render: () => (
    <div style={{ display: 'flex', gap: '2rem', flexWrap: 'wrap' }}>
      <div>
        <Heading
          level={2}
          data-size="2xs"
          style={{ marginBottom: 'var(--ds-size-2)' }}
        >
          List sm og Heading 2xs
        </Heading>
        <List.Unordered data-size="sm">
          <List.Item>
            <Link
              href="https://www.designsystemet.no/grunnleggende"
              target="_blank"
            >
              Grunnleggende
            </Link>
          </List.Item>
          <List.Item>
            <Link
              href="https://www.designsystemet.no/god-praksis"
              target="_blank"
            >
              God praksis
            </Link>
          </List.Item>
          <List.Item>
            <Link href="https://www.designsystemet.no/monstre" target="_blank">
              Mønstre
            </Link>
          </List.Item>
        </List.Unordered>
      </div>
      <div>
        <Heading
          level={2}
          data-size="xs"
          style={{ marginBottom: 'var(--ds-size-2)' }}
        >
          List md og Heading xs
        </Heading>
        <List.Unordered data-size="md">
          <List.Item>
            <Link
              href="https://www.designsystemet.no/grunnleggende"
              target="_blank"
            >
              Grunnleggende
            </Link>
          </List.Item>
          <List.Item>
            <Link
              href="https://www.designsystemet.no/god-praksis"
              target="_blank"
            >
              God praksis
            </Link>
          </List.Item>
          <List.Item>
            <Link href="https://www.designsystemet.no/monstre" target="_blank">
              Mønstre
            </Link>
          </List.Item>
        </List.Unordered>
      </div>
      <div>
        <Heading
          level={2}
          data-size="sm"
          style={{ marginBottom: 'var(--ds-size-2)' }}
        >
          List lg og Heading sm
        </Heading>
        <List.Unordered data-size="lg">
          <List.Item>
            <Link
              href="https://www.designsystemet.no/grunnleggende"
              target="_blank"
            >
              Grunnleggende
            </Link>
          </List.Item>
          <List.Item>
            <Link
              href="https://www.designsystemet.no/god-praksis"
              target="_blank"
            >
              God praksis
            </Link>
          </List.Item>
          <List.Item>
            <Link href="https://www.designsystemet.no/monstre" target="_blank">
              Mønstre
            </Link>
          </List.Item>
        </List.Unordered>
      </div>
    </div>
  ),
};
