// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Innrykk 1`] = `
<ul>
  <li>
    <h3
      data-size="xs"
      style="margin-bottom: var(--ds-size-2);"
    >
      List Item 1
    </h3>
    <ol>
      <li>
        List Item 1.1
      </li>
      <li>
        List Item 1.2
      </li>
      <li>
        List Item 1.3
      </li>
    </ol>
  </li>
  <li>
    <h3
      data-size="xs"
      style="margin-bottom: var(--ds-size-2);"
    >
      List Item 2
    </h3>
    <ul>
      <li>
        List Item 2.1
      </li>
      <li>
        List Item 2.2
      </li>
      <li>
        List Item 2.3
      </li>
    </ul>
  </li>
  <li>
    <h3
      data-size="xs"
      style="margin-bottom: var(--ds-size-2);"
    >
      List Item 3
    </h3>
    <ul>
      <li>
        List Item 3.1
      </li>
      <li>
        List Item 3.2
      </li>
      <li>
        List Item 3.3
      </li>
    </ul>
  </li>
</ul>
`;

exports[`Liste Med Lenker 1`] = `
<ul style="list-style: none; padding: 0px;">
  <li>
    <a
      href="https://www.udir.no/om-udir/designprofil/identitet/"
      target="_blank"
    >
      Identitet
    </a>
  </li>
  <li>
    <a
      href="https://www.udir.no/om-udir/designprofil/farger/"
      target="_blank"
    >
      Farger
    </a>
  </li>
  <li>
    <a
      href="https://www.udir.no/om-udir/designprofil/typografi/"
      target="_blank"
    >
      Typografi
    </a>
  </li>
</ul>
`;

exports[`Liste Med Overskrift 1`] = `
<div style="display: flex; gap: 2rem; flex-wrap: wrap;">
  <div>
    <h2
      data-size="2xs"
      style="margin-bottom: var(--ds-size-2);"
    >
      List sm og Heading 2xs
    </h2>
    <ul data-size="sm">
      <li>
        <a
          href="https://www.designsystemet.no/grunnleggende"
          target="_blank"
        >
          Grunnleggende
        </a>
      </li>
      <li>
        <a
          href="https://www.designsystemet.no/god-praksis"
          target="_blank"
        >
          God praksis
        </a>
      </li>
      <li>
        <a
          href="https://www.designsystemet.no/monstre"
          target="_blank"
        >
          Mønstre
        </a>
      </li>
    </ul>
  </div>
  <div>
    <h2
      data-size="xs"
      style="margin-bottom: var(--ds-size-2);"
    >
      List md og Heading xs
    </h2>
    <ul data-size="md">
      <li>
        <a
          href="https://www.designsystemet.no/grunnleggende"
          target="_blank"
        >
          Grunnleggende
        </a>
      </li>
      <li>
        <a
          href="https://www.designsystemet.no/god-praksis"
          target="_blank"
        >
          God praksis
        </a>
      </li>
      <li>
        <a
          href="https://www.designsystemet.no/monstre"
          target="_blank"
        >
          Mønstre
        </a>
      </li>
    </ul>
  </div>
  <div>
    <h2
      data-size="sm"
      style="margin-bottom: var(--ds-size-2);"
    >
      List lg og Heading sm
    </h2>
    <ul data-size="lg">
      <li>
        <a
          href="https://www.designsystemet.no/grunnleggende"
          target="_blank"
        >
          Grunnleggende
        </a>
      </li>
      <li>
        <a
          href="https://www.designsystemet.no/god-praksis"
          target="_blank"
        >
          God praksis
        </a>
      </li>
      <li>
        <a
          href="https://www.designsystemet.no/monstre"
          target="_blank"
        >
          Mønstre
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Preview 1`] = `
<ul>
  <li>
    List Item 1
  </li>
  <li>
    List Item 2
  </li>
  <li>
    List Item 3
  </li>
</ul>
`;

exports[`Sortert 1`] = `
<h2
  data-size="xs"
  style="margin-bottom: var(--ds-size-2);"
>
  Slik gjør du:
</h2>
<ol>
  <li>
    Tørk over kyllingfiletene før du krydrer og steker. Dette vil gi en finere stekeskorpe på kjøttet. Ikke bruk kjøkkenpapir som loer. Papirbiter i maten er ikke noe særlig.
  </li>
  <li>
    Ha salt og pepper på filetene og eventuelt annet krydder for ekstra smak. Hvitløkpepper, paprika eller provence kan gi en god smak!
  </li>
  <li>
    Stek filetene på sterk varme i to minutter på hver side. Sett deretter på lokk og stek videre på svak varme i syv minutter på hver side.
  </li>
</ol>
`;

exports[`Usortert 1`] = `
<h2
  data-size="xs"
  style="margin-bottom: var(--ds-size-2);"
>
  Foreningen har plikt til å ha revisor hvis de har
</h2>
<ul>
  <li>
    et gjennomsnittlig antall ansatte som tilsvarer ti årsverk eller mer
  </li>
  <li>
    balansesum som er 27 millioner kroner eller mer
  </li>
  <li>
    driftsinntekter for sin samlede virksomhet på 7 millioner kroner eller mer
  </li>
</ul>
`;
